--- a/Source/Zybach.Web/src/app/shared/components/chemigation-permit-annual-record-upsert/chemigation-permit-annual-record-upsert.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/chemigation-permit-annual-record-upsert/chemigation-permit-annual-record-upsert.component.html
@@ -66,6 +66,20 @@
                 </div>
             </div>
 
+            <div class="col-6 control-label text-right mb-2">
+                <label><strong>Date Approved: </strong></label>
+            </div>
+            <div class="col-6 text-left mb-2 form-group">
+                <div class="input-group">
+                    <input class="form-control" name="dp2"
+                    placeholder="yyyy-mm-dd"
+                    [(ngModel)]="model.DateApproved" ngbDatepicker #d2="ngbDatepicker" />
+                    <div class="input-group-append">
+                        <button class="btn btn-zybach far fa-calendar" (click)="d2.toggle()" type="button"></button>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
         <div class="row col-6 mt-4">
