--- a/Source/Zybach.Web/src/app/pages/reports-list/reports-list.component.html
+++ b/Source/Zybach.Web/src/app/pages/reports-list/reports-list.component.html
@@ -18,20 +18,13 @@
     </div>
 </div>
 <div class="container">
-    <a class="btn btn-zybach btn-md mr-3 float-right" routerLink="/reports/new"><span class="fas fa-plus"></span> New Report Template</a>
-    <button (click)="generateReport()" [disabled]="isLoadingSubmit" class="btn btn-zybach btn-md mr-3 float-right">
-        <span *ngIf="isLoadingSubmit" class="fa fa-spinner loading-spinner"></span>
-        Generate Report
-    </button>
-    <select name="ReportTemplateID" class="form-control mr-3 float-right mb-2" style="width:auto; min-width: 100px;" [(ngModel)]="selectedReportTemplateID" required>
-        <option value=""></option>
-        <option *ngFor="let reportTemplate of reportTemplates" [value]="reportTemplate.ReportTemplateID">
-            {{reportTemplate.DisplayName}}
-        </option>
-    </select>
-    <fresca-clear-grid-filters-button class="float-right mr-3" [grid]="reportTemplatesGrid">
-    </fresca-clear-grid-filters-button>
-
+    <div class="row my-2">
+        <div class="col">
+            <a class="btn btn-zybach btn-md mr-3 float-right" routerLink="/reports/new"><span class="fas fa-plus"></span> New Report Template</a>
+            <fresca-clear-grid-filters-button class="float-right mr-3" [grid]="reportTemplatesGrid">
+            </fresca-clear-grid-filters-button>
+        </div>
+    </div>
     <div class="table-responsive">
         <ag-grid-angular #reportTemplatesGrid style="width: 100%; height: 800px;" class="ag-theme-balham" [rowData]="rowData"
             [columnDefs]="columnDefs" [pagination]="true" [paginationPageSize]="100">
