basic inspection display functionality on detail page

--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
@@ -316,7 +316,10 @@
                         <h5>Annual Record Notes</h5>
                         <div *ngIf="currentYearAnnualRecord.AnnualNotes ; then hasAnnualNotes else noAnnualNotes"></div>
                         <ng-template #hasAnnualNotes>
-                            <p>{{currentYearAnnualRecord.AnnualNotes}}</p>
+                            <div class="card card-body mt-2 mb-5">
+                                <p>{{currentYearAnnualRecord.AnnualNotes}}</p>
+
+                            </div>
                             
                         </ng-template>
                         <ng-template #noAnnualNotes><p>No annual record notes found for this year.</p></ng-template>
@@ -330,24 +333,154 @@
                         <h5>Inspections</h5>
                         <div *ngIf="currentYearAnnualRecord.Inspections.length > 0 ; then hasInspections else noInspections"></div>
                         <ng-template #hasInspections>
+                            
+                            <div class="row col-12" *ngFor="let inspection of getInspections()">
 
-                            <!-- 
-                    [class.selected]="checkSelectedView(item)" (click)="updateView(item)" (mouseenter)="hoverItem = item"
-                    (mouseleave)="hoverItem = null" placement="top" ngbTooltip="{{item}}" tooltipClass="selector-tooltip" -->
+                                <div class="col-12">
+                                    <hr class="w-90" />
+                                </div>
 
-
-                            <div class="col-12 p-0">
-                                <ul class="list-group list-group-flush text-center text-lg-left flex-row" style="width:100%">
-                                  <li class="list-group-item header p-0" style="width:100%" *ngFor="let inspection of getInspections()">
-                                    <div class="container" style="height:100%">
-                                      <div class="row d-flex flex-wrap align-items-center ml-1" style="height:100%">
-                                        <div class="col-lg-9 pl-0 d-lg-block d-none">
-                                          {{inspection}}
+                                <div class="row col-6">
+                                    
+                                    <div class="row col-12">
+                                        <div class="col-6 text-right">
+                                            <p><strong>Inspection Type: </strong></p>
                                         </div>
-                                      </div>
+                                        <div class="col-6 text-left">
+                                            <p>{{inspection.ChemigationInspectionTypeName}}
+                                                <em *ngIf="!inspection.ChemigationInspectionTypeName" class="text-muted">N/A</em>
+                                            </p>
+                                        </div>
                                     </div>
-                                  </li>
-                                </ul>
+        
+                                    <div class="row col-12">
+                                        <div class="col-6 text-right">
+                                            <p><strong>Date: </strong></p>
+                                        </div>
+                                        <div class="col-6 text-left">
+                                            <p>{{inspection.InspectionDate | date:'shortDate'}}
+                                            </p>
+                                        </div>
+                                    </div>
+        
+                                    <div class="row col-12">
+                                        <div class="col-6 text-right">
+                                            <p><strong>Inspector: </strong></p>
+                                        </div>
+                                        <div class="col-6 text-left">
+                                            <p>{{inspection.Inspector.FullNameLastFirst}}
+                                    
+                                            </p>
+                                        </div>
+                                    </div>
+        
+                                    <div class="row col-12">
+                                        <div class="col-6 text-right">
+                                            <p><strong>Status: </strong></p>
+                                        </div>
+                                        <div class="col-6 text-left">
+                                            <p>{{inspection.ChemigationInspectionStatusName}}
+                                
+                                            </p>
+                                        </div>
+                                    </div>
+        
+                                    <div class="row col-12">
+                                        <div class="col-6 text-right">
+                                            <p><strong>Inspection Notes: </strong></p>
+                                        </div>
+                                        <div class="col-6 text-left">
+                                            <div class="card card-body mt-2 mb-5">
+                                                <p>
+                                                    {{inspection.InspectionNotes}}
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+        
+                                </div>
+
+                                <div class="row col-6">
+
+                                    <div class="row col-12">
+                                        <div class="col-6 text-right">
+                                            <p><strong>Mainline Check Valve: </strong></p>
+                                        </div>
+                                        <div class="col-6 text-left">
+                                            <p>{{inspection.ChemigationMainlineCheckValveName}}
+                                                <em *ngIf="!inspection.ChemigationMainlineCheckValveName" class="text-muted">N/A</em>
+                                            </p>
+                                        </div>
+                                    </div>
+        
+                                    <div class="row col-12">
+                                        <div class="col-6 text-right">
+                                            <p><strong>Vacuum Relief Valve?: </strong></p>
+                                        </div>
+                                        <div class="col-6 text-left">
+                                            <p>{{inspection.HasVacuumReliefValve ? 'Yes' : 'No'}}
+                                            </p>
+                                        </div>
+                                    </div>
+
+                                    <div class="row col-12">
+                                        <div class="col-6 text-right">
+                                            <p><strong>Inspection Port?: </strong></p>
+                                        </div>
+                                        <div class="col-6 text-left">
+                                            <p>{{inspection.HasInspectionPort ? 'Yes' : 'No'}}
+                                            </p>
+                                        </div>
+                                    </div>
+
+                                    <div class="row col-12">
+                                        <div class="col-6 text-right">
+                                            <p><strong>Low Pressure Valve: </strong></p>
+                                        </div>
+                                        <div class="col-6 text-left">
+                                            <p>{{inspection.ChemigationLowPressureValveName}}
+                                                <em *ngIf="!inspection.ChemigationLowPressureValveName" class="text-muted">N/A</em>
+                                            </p>
+                                        </div>
+                                    </div>
+        
+                                    
+                                    <div class="row col-12">
+                                        <div class="col-6 text-right">
+                                            <p><strong>Chemigation Injection Valve: </strong></p>
+                                        </div>
+                                        <div class="col-6 text-left">
+                                            <p>{{inspection.ChemigationInjectionValveName}}
+                                                <em *ngIf="!inspection.ChemigationInjectionValveName" class="text-muted">N/A</em>
+                                            </p>
+                                        </div>
+                                    </div>
+        
+        
+                                    <div class="row col-12">
+                                        <div class="col-6 text-right">
+                                            <p><strong>Tillage: </strong></p>
+                                        </div>
+                                        <div class="col-6 text-left">
+                                            <p>{{inspection.TillageName}}
+                                                <em *ngIf="!inspection.TillageName" class="text-muted">N/A</em>
+                                            </p>
+                                        </div>
+                                    </div>
+
+                                    <div class="row col-12">
+                                        <div class="col-6 text-right">
+                                            <p><strong>Crop Type: </strong></p>
+                                        </div>
+                                        <div class="col-6 text-left">
+                                            <p>{{inspection.CropTypeName}}
+                                                <em *ngIf="!inspection.CropTypeName" class="text-muted">N/A</em>
+                                            </p>
+                                        </div>
+                                    </div>
+
+                                </div>
+
                             </div>
                             
                         </ng-template>
