layout adjustments per Kathleen

--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
@@ -80,7 +80,6 @@
                 <div class="row col-12" *ngIf="currentYearAnnualRecord">
                     <div class="row col-12">
                         <div class="row col-6">
-
                             <div class="row col-12">
                                 <div class="col-6 text-right">
                                     <p><strong>Annual Record Status: </strong></p>
@@ -158,7 +157,20 @@
                                     </em>
                                 </div>
                             </div>
-
+        
+                            <div class="row col-12">
+                                <div class="col-6 text-right">
+                                    <p><strong>Annual Record Notes: </strong></p>
+                                </div>
+                                <div class="col-6 text-left">
+                                    <p *ngIf="currentYearAnnualRecord.AnnualNotes">
+                                        {{currentYearAnnualRecord.AnnualNotes}}
+                                    </p>
+                                    <em *ngIf="!currentYearAnnualRecord.AnnualNotes" class="text-muted">
+                                        N/A
+                                    </em>
+                                </div>
+                            </div>
                         </div>
 
                         <div class="row col-6">
@@ -313,28 +325,24 @@
                     </div>
 
                     <div class="col-12 mb-4">
-                        <h5>Annual Record Notes</h5>
-                        <div *ngIf="currentYearAnnualRecord.AnnualNotes ; then hasAnnualNotes else noAnnualNotes"></div>
-                        <ng-template #hasAnnualNotes>
-                            <div class="card card-body mb-5">
-                                <p>{{currentYearAnnualRecord.AnnualNotes}}</p>
-
-                            </div>
-                            
-                        </ng-template>
-                        <ng-template #noAnnualNotes><p>No annual record notes found for this year.</p></ng-template>
-                    </div>
-
-                    <div class="col-12">
-                        <hr class="w-90" />
-                    </div>
-
-                    <div class="col-12 mb-4">
                         <h5>Inspections</h5>
                         <div *ngIf="currentYearAnnualRecord.Inspections.length > 0 ; then hasInspections else noInspections"></div>
                         <ng-template #hasInspections>
                             
                             <div class="row col-12" *ngFor="let inspection of getInspections()">
+                                    <!-- <ul class="list-group list-group-flush text-center text-lg-left flex-row" style="width:100%">
+                                      <li class="list-group-item header" style="width:100%" *ngFor="let inspection of getInspections()"
+                                        [class.selected]="checkSelectedView(inspection.ChemigationInspectionID)" (click)="updateView(inspection.ChemigationInspectionID)" (mouseenter)="hoverItem = inspection"
+                                        (mouseleave)="hoverItem = null" placement="top" ngbTooltip="{{inspection.InspectionDate | date:'shortDate'}}" tooltipClass="selector-tooltip">
+                                        <div class="container" style="height:100%">
+                                          <div class="row d-flex flex-wrap align-items-center ml-1" style="height:100%">
+                                            <div class="col-lg-9 pl-0 d-lg-block d-none">
+                                              {{inspection.InspectionDate | date:'shortDate'}}
+                                            </div>
+                                          </div>
+                                        </div>
+                                      </li>
+                                    </ul> -->
 
                                 <div class="col-12">
                                     <hr class="w-90" />
@@ -344,21 +352,21 @@
                                     
                                     <div class="row col-12">
                                         <div class="col-6 text-right">
-                                            <p><strong>Inspection Type: </strong></p>
+                                            <p><strong>Date: </strong></p>
                                         </div>
                                         <div class="col-6 text-left">
-                                            <p>{{inspection.ChemigationInspectionTypeName}}
-                                                <em *ngIf="!inspection.ChemigationInspectionTypeName" class="text-muted">N/A</em>
+                                            <p>{{inspection.InspectionDate | date:'shortDate'}}
                                             </p>
                                         </div>
                                     </div>
         
                                     <div class="row col-12">
                                         <div class="col-6 text-right">
-                                            <p><strong>Date: </strong></p>
+                                            <p><strong>Inspection Type: </strong></p>
                                         </div>
                                         <div class="col-6 text-left">
-                                            <p>{{inspection.InspectionDate | date:'shortDate'}}
+                                            <p>{{inspection.ChemigationInspectionTypeName}}
+                                                <em *ngIf="!inspection.ChemigationInspectionTypeName" class="text-muted">N/A</em>
                                             </p>
                                         </div>
                                     </div>
@@ -385,7 +393,7 @@
                                         </div>
                                     </div>
 
-                                    <div class="row col-12">
+                                    <div class="row col-12" *ngIf="inspection.ChemigationInspectionFailureReasonName">
                                         <div class="col-6 text-right">
                                             <p><strong>Failure Reason: </strong></p>
                                         </div>
@@ -401,12 +409,10 @@
                                             <p><strong>Inspection Notes: </strong></p>
                                         </div>
                                         <div class="col-6 text-left">
-                                            <em *ngIf="!inspection.InspectionNotes" class="text-muted">N/A</em>
-                                            <div class="card card-body mb-5" *ngIf="inspection.InspectionNotes">
-                                                <p>
-                                                    {{inspection.InspectionNotes}}
-                                                </p>
-                                            </div>
+                                            <p>
+                                                <em *ngIf="!inspection.InspectionNotes" class="text-muted">N/A</em>
+                                                {{inspection.InspectionNotes}}
+                                            </p>
                                         </div>
                                     </div>
         
@@ -424,7 +430,29 @@
                                             </p>
                                         </div>
                                     </div>
-        
+                                    
+                                    <div class="row col-12">
+                                        <div class="col-6 text-right">
+                                            <p><strong>Low Pressure Valve: </strong></p>
+                                        </div>
+                                        <div class="col-6 text-left">
+                                            <p>{{inspection.ChemigationLowPressureValveName}}
+                                                <em *ngIf="!inspection.ChemigationLowPressureValveName" class="text-muted">N/A</em>
+                                            </p>
+                                        </div>
+                                    </div>
+                                    
+                                    <div class="row col-12">
+                                        <div class="col-6 text-right">
+                                            <p><strong>Chemigation Injection Valve: </strong></p>
+                                        </div>
+                                        <div class="col-6 text-left">
+                                            <p>{{inspection.ChemigationInjectionValveName}}
+                                                <em *ngIf="!inspection.ChemigationInjectionValveName" class="text-muted">N/A</em>
+                                            </p>
+                                        </div>
+                                    </div>
+                                    
                                     <div class="row col-12">
                                         <div class="col-6 text-right">
                                             <p><strong>Vacuum Relief Valve?: </strong></p>
@@ -445,30 +473,6 @@
                                         </div>
                                     </div>
 
-                                    <div class="row col-12">
-                                        <div class="col-6 text-right">
-                                            <p><strong>Low Pressure Valve: </strong></p>
-                                        </div>
-                                        <div class="col-6 text-left">
-                                            <p>{{inspection.ChemigationLowPressureValveName}}
-                                                <em *ngIf="!inspection.ChemigationLowPressureValveName" class="text-muted">N/A</em>
-                                            </p>
-                                        </div>
-                                    </div>
-        
-                                    
-                                    <div class="row col-12">
-                                        <div class="col-6 text-right">
-                                            <p><strong>Chemigation Injection Valve: </strong></p>
-                                        </div>
-                                        <div class="col-6 text-left">
-                                            <p>{{inspection.ChemigationInjectionValveName}}
-                                                <em *ngIf="!inspection.ChemigationInjectionValveName" class="text-muted">N/A</em>
-                                            </p>
-                                        </div>
-                                    </div>
-        
-        
                                     <div class="row col-12">
                                         <div class="col-6 text-right">
                                             <p><strong>Tillage: </strong></p>
