create and update endpoints for chemigation inspection; added notes field on CPAR upsert component

--- a/Source/Zybach.Web/src/app/shared/components/chemigation-permit-annual-record-upsert/chemigation-permit-annual-record-upsert.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/chemigation-permit-annual-record-upsert/chemigation-permit-annual-record-upsert.component.html
@@ -80,6 +80,15 @@
                 </div>
             </div>
 
+            <div class="col-6 control-label text-right mb-2">
+                <label><strong>Notes: </strong></label>
+            </div>
+            <div class="col-6 text-left mb-2">
+                <textarea class="form-control" name="AnnualNotes"
+                    placeholder="Notes" [(ngModel)]="model.AnnualNotes">
+                </textarea>
+            </div>
+
         </div>
 
         <div class="row col-6 mt-4">
